--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utasellátó Kávéház honlapja",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w",
+    "comp:print": "node-sass sass/print.scss css/printmenu.css -w"
   },
   "author": "Nyolczas István",
   "license": "ISC",
